deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simulator
  labels:
    app.kubernetes.io/name: simulator
